fixed config file

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,8 @@
 branch-defaults:
   jn-gold-efficiency-new:
     environment: item-set-builder-dev
+  master:
+    environment: item-set-builder-dev
 global:
   application_name: item-set-builder
   default_ec2_keyname: null
